# rasterizationAndFFT

./: CMakeLists.txt  Makefile  README.md  calculate_power_spectrum.cpp  file_operations.hpp  file_reader.hpp  kdtree_raster.py  power_spectra.py  raster.hpp  raster_and_spectra.py
docs/: Doxyfile
docs-out/html/: index.html  navtreedata.js
docs/docs-out/html/: README_8md.html  accel__switch_8hpp.html  accel__switch_8hpp.js  accel__switch_8hpp__dep__incl.map  accel__switch_8hpp__dep__incl.md5  accel__switch_8hpp__incl.map  accel__switch_8hpp__incl.md5  accel__switch_8hpp_source.html  aligned__alloc_8hpp.html  aligned__alloc_8hpp.js  aligned__alloc_8hpp__incl.map  aligned__alloc_8hpp__incl.md5  aligned__alloc_8hpp_source.html  annotated.html  annotated_dup.js  annotation_8hpp.html  annotation_8hpp.js  annotation_8hpp__dep__incl.map  annotation_8hpp__dep__incl.md5  annotation_8hpp_source.html  api__guide_8md.html  arg__parser_8hpp.html  arg__parser_8hpp.js  arg__parser_8hpp__dep__incl.map  arg__parser_8hpp__dep__incl.md5  arg__parser_8hpp__incl.map  arg__parser_8hpp__incl.md5  arg__parser_8hpp_source.html  array_8hpp.html  array_8hpp.js  array_8hpp__dep__incl.map  array_8hpp__dep__incl.md5  array_8hpp__incl.map  array_8hpp__incl.md5  array_8hpp_source.html  assignment_8hpp.html  assignment_8hpp.js  assignment_8hpp__dep__incl.map  assignment_8hpp__dep__incl.md5  assignment_8hpp__incl.map  (+1544 more)
docs/docs-out/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+115 more)
docs/examples/: domain_minimal.cpp
docs/pages/: api_guide.md  examples.md  index.md  python_scripts.md  usage_domain.md  usage_mesh_app.md
main/: CMakeLists.txt
main/cmake/: rasterization_add_test.cmake  setup_GTest.cmake
main/src/: CMakeLists.txt  mesh.cu  mesh.hpp  power_spectrum.cpp  utils.hpp
main/test/: CMakeLists.txt  heffte_tests.cpp  mesh_tests.cpp
scripts/: h5totext.py  kdtree_raster.py  kolmogorov.py  plot_spectra.py  raster.py  raster_and_spectra.py
